k8s/comments-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: alancurtis31/comments:latest

--- # three dashes allow you to make multiple types inside one file ^kind: deployment / kind Service
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  selector:
    app: comments
  type: ClusterIP # defaults to ClusterIP if type not provided
  ports:
    - name: comments # "-" in yaml file mean array.
      protocol: TCP
      port: 4001
      targetPort: 4001
