k8s/ingress-service.yaml
# ingress is used for routing traffic to diffrent pods
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' # allows us to use regex in paths
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts/create # anything coming in with path posts, send to posts microservice.
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-service # send it to cluster ip service
                port:
                  number: 4000
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-service # send it to cluster ip service
                port:
                  number: 4002
          - path: /posts/?(.*)/comments # need to use regex for path variables like ID
            pathType: Prefix
            backend:
              service:
                name: comments-service # send it to cluster ip service
                port:
                  number: 4001
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-service # send it to cluster ip service
                port:
                  number: 3000
